# datalist

./: .gitignore  LICENSE  README.ja.md  README.md  __init__.py  datalist.py  j.py  picklist.py  setup.cfg
picklist/: __init__.py  core.py
src/: __init__.py  picklist.py
tests/: test_datalist.py  test_picklist.py  utils.py
