[metadata]
name = datalist
version = attr: __version__
author = Toshiyuki Yokoyama
author_email = yokoyamacode@gmail.com
description = Extracts element simply with conditions.
keywords = list, data, extract
url = https://github.com/yoko72/datalist
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
license_files = LICENSE

[options]
python_requires = >=3.5
# Requires typing in default, though it's not essential.